--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "proxy-agent": "^5.0.0",
+    "redis": "^4.2.0",
     "ts-node": "^10.8.2",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4"
